• Updates to responsive layouts for testimonial box size (home page) and building image carousel; • Fixed (hopefully) bug with featured properties manually flipping via js on tablet/mobile screens

--- a/client/templates/building/building.styl
+++ b/client/templates/building/building.styl
@@ -264,7 +264,7 @@ main.container
     background-color #F4F4F8
     border-radius 5px
     border-top 4px solid #4588fa
-    font-sizez 15px
+    font-size 15px
     margin 25px 0 15px 
     padding 15px 5% 10px
     @media screen and (min-width: 992px)
@@ -358,21 +358,21 @@ main.container
       display inline-block
 
   .building-img-wrap
-    height 250px
+    height 315px
     margin-bottom 5px
     @media screen and (min-width: 350px)
-      height 280px
+      height 325px
     @media screen and (min-width: 400px)
-      height 300px
-    @media screen and (min-width: 450px)
-      height 345px
-    @media screen and (min-width: 600px)
       height 360px
+    @media screen and (min-width: 600px)
+      height 390px
     @media screen and (min-width: 768px)
       height 410px
+      margin-bottom 15px
     @media screen and (min-width: 992px)
-      max-width 700px
       height 400px
+      margin-bottom 20px
+      max-width 700px
     @media screen and (min-width: 1200px)
       height 408px
 
@@ -412,15 +412,13 @@ main.container
       margin 0 10px
       overflow hidden
       visibility hidden
-      height 250px
+      height 310px
       @media screen and (min-width: 350px)
-        height 280px
+        height 320px
       @media screen and (min-width: 400px)
-        height 300px
-      @media screen and (min-width: 450px)
-        height 345px
+        height 355px
       @media screen and (min-width: 600px)
-        height 360px
+        height 380px
       @media screen and (min-width: 768px)
         height 410px
       @media screen and (min-width: 992px)
@@ -435,12 +433,12 @@ main.container
       margin 0 auto
 
     .slick-prev:before,.slick-next:before
-      box-shadow 0 1px 5px (0,0,0,.5)
+      text-shadow 0 1px 5px rgba(0,0,0,.5)
       font-size 25px
       color #fff
       transition all .3s ease
       @media screen and (min-width: 768px)
-        box-shadow 0 1px 1px (0,0,0,.15)
+        text-shadow 0 1px 1px rgba(0,0,0,.15)
         color #4588fa
 
     .slick-prev
@@ -470,11 +468,14 @@ main.container
   .building-features-list
     margin 0 0 15px
     li
+      font-size 15px
       padding-left 25px
-      margin 3px 0
+      padding-right 0
+      margin 5px 0
       @media screen and (min-width: 768px)
         font-size 16px
         margin 5px 0
+        padding-right 5px
       i
         position absolute
         left 0
